--- a/gxm_kvim2.dts
+++ b/gxm_kvim2.dts
@@ -51,7 +51,7 @@
 	dvb {
 		compatible = "amlogic,dvb";
 		dev_name = "dvb";
-		ts0 = "parallel";
+		ts0 = "serial";
 		ts0_control = <0x0>;
 		ts0_invert = <0x0>;
 		fec_reset_gpio-gpios = <&gpio GPIODV_13 GPIO_ACTIVE_HIGH>;
