dts: K-series: Add key map for IR remote

--- a/gxbb_p200_k2_pro.dts
+++ b/gxbb_p200_k2_pro.dts
@@ -74,3 +74,51 @@
 &i2c_slave {
 	status = "disabled";
 };
+custom_maps:custom_maps {
+	mapnum = <1>;
+	map0 = <&map_0>;
+	map_0: map_0{
+		mapname = "amlogic-remote-1";
+		customcode = <0xff00>;
+		release_delay = <80>;
+		size  = <37>;
+		keymap = <REMOTE_KEY(0x51, KEY_1)
+			REMOTE_KEY(0x50, KEY_2)
+			REMOTE_KEY(0x10, KEY_3)
+			REMOTE_KEY(0x56, KEY_4)
+			REMOTE_KEY(0x54, KEY_5)
+			REMOTE_KEY(0x14, KEY_6)
+			REMOTE_KEY(0x4e, KEY_7)
+			REMOTE_KEY(0x4c, KEY_8)
+			REMOTE_KEY(0x0c, KEY_9)
+			REMOTE_KEY(0x11, KEY_0)
+			REMOTE_KEY(0x45, KEY_MENU)
+			REMOTE_KEY(0x55, KEY_CHANNELUP)
+			REMOTE_KEY(0x15, KEY_CHANNELDOWN)
+			REMOTE_KEY(0x13, KEY_VOLUMEUP)
+			REMOTE_KEY(0x17, KEY_VOLUMEDOWN)
+			REMOTE_KEY(0x0d, KEY_HOME)
+			REMOTE_KEY(0x1b, KEY_RIGHT)
+			REMOTE_KEY(0x5a, KEY_LEFT)
+			REMOTE_KEY(0x06, KEY_UP)
+			REMOTE_KEY(0x16, KEY_DOWN)
+			REMOTE_KEY(0x1a, KEY_ENTER)
+			REMOTE_KEY(0x19, KEY_MUTE)
+			REMOTE_KEY(0x05, KEY_BACK)
+			REMOTE_KEY(0x0e, KEY_INFO)
+			REMOTE_KEY(0x44, KEY_X)           /* STOP*/
+			REMOTE_KEY(0x59, KEY_POWER)
+			REMOTE_KEY(0x4a, KEY_REWIND)
+			REMOTE_KEY(0x48, KEY_FASTFORWARD)
+			REMOTE_KEY(0x46, KEY_PLAYPAUSE)
+			REMOTE_KEY(0x1f, KEY_FAVORITES)
+			REMOTE_KEY(0x4d, KEY_EPG)
+			REMOTE_KEY(0x01, KEY_SCROLLLOCK)
+			REMOTE_KEY(0x51, KEY_FN_ESC)
+			REMOTE_KEY(0x42, KEY_RED)
+			REMOTE_KEY(0x40, KEY_GREEN)
+			REMOTE_KEY(0x00, KEY_YELLOW)
+			REMOTE_KEY(0x03, KEY_BLUE)>;
+	};
+};
+
